@@ -734,6 +734,11 @@ Nmap, all of which are available from the
 download page at <ulink url="http://nmap.org/download.html" />.</para>
 
 
+<sect2 id="inst-win2k"><title>Windows 2000 Dependencies</title>
+<indexterm><primary>Windows</primary><secondary>Windows 2000 Dependencies</secondary></indexterm>
+
+<para>Nmap supports Windows 2000, but a couple dependencies from Microsoft must be installed first.  Those are the <ulink url="http://microsoft.com/downloads/details.aspx?FamilyID=889482FC-5F56-4A38-B838-DE776FD4138C">Windows Installer 3.1 (v2)</ulink> and the <ulink url="http://microsoft.com/downloads/details.aspx?FamilyID=0692C27E-F63A-414C-B3EB-D2342FBB6C00">Security Update for Windows 2000 (KB835732)</ulink>.  After installing these, follow the general instructions in the following two sections to install Nmap.</para>
+</sect2>
 
 <sect2 id="inst-win-exe"><title>Windows Self-installer</title>
 <indexterm><primary>Windows</primary><secondary>self-installer</secondary></indexterm>
